logs/wsgintegrate.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './lib/python3.5/site-packages/wsgintegrate'...
Compiling './lib/python3.5/site-packages/wsgintegrate/dispatcher.py'...
***   File "./lib/python3.5/site-packages/wsgintegrate/dispatcher.py", line 25
    print app
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wsgintegrate/factory.py'...
***   File "./lib/python3.5/site-packages/wsgintegrate/factory.py", line 21
    print "Reloading '%s': %s > %s" % (self.inifile, mtime, self.mtime)
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgintegrate/main.py'...
***   File "./lib/python3.5/site-packages/wsgintegrate/main.py", line 53
    print app
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/wsgintegrate-0.1.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
